[package]
name = "logging_timer"
version = "1.1.1"
authors = ["Philip Daniels <Philip.Daniels1971@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PhilipDaniels/logging_timer"
description = "Simple timers that log the elapsed time when dropped"
categories = ["development-tools::debugging"]
keywords = ["logging", "log", "timer", "execution", "speed"]
documentation = "https://docs.rs/logging_timer/"

[dependencies]
log = "0.4"
logging_timer_proc_macros = { path = "./logging_timer_proc_macros" }
# logging_timer_proc_macros = "1.1.0"


[dev-dependencies]
env_logger = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.36.0", features = ["full"] }