[package]
name = "logging_timer_proc_macros"
version = "0.4.0"
authors = ["Philip Daniels <Philip.Daniels1971@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
quote = "0.6"
proc-macro2 = "0.4"
darling = "0.9.0"

[dependencies.syn]
version = "0.15.42"
features = ["full"]
