[package]
name = "logging_timer_proc_macros"
version = "0.9.2"
authors = ["Philip Daniels <Philip.Daniels1971@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PhilipDaniels/logging_timer"
description = "Proc-macro implementation for the logging_timer crate"
categories = ["development-tools::debugging"]
keywords = ["logging", "log", "timer", "execution", "speed"]
documentation = "https://docs.rs/logging_timer/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
quote = "0.6"
proc-macro2 = "0.4"

[dependencies.syn]
version = "0.15.42"
features = ["full"]
