[package]
name = "logging_timer_proc_macros"
version = "1.1.0"
authors = ["Philip Daniels <Philip.Daniels1971@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PhilipDaniels/logging_timer"
description = "Proc-macro implementation for the logging_timer crate"
categories = ["development-tools::debugging"]
keywords = ["logging", "log", "timer", "execution", "speed"]
documentation = "https://docs.rs/logging_timer/"

[lib]
proc-macro = true

[dependencies]
log = "0.4"
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.syn]
version = "1.0"
features = ["full"]
